--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
           error.value = '';
 
           try {
-            const res = await fetch('/backend/api/auth.php', {
+            const res = await fetch('./backend/api/auth.php', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({
