--- a/index.html
+++ b/index.html
@@ -47,19 +47,153 @@
     </div>
   </header>
 
-<main class="hero-section">
-  <div class="hero-content">
-    <h1>RÚBEN PELUQUEROS</h1>
-    <h2>TU PELUQUERÍA EN VILLANUEVA DEL ARISCAL</h2>
-    <a href="login.html" class="cta-button">RESERVA TU CITA</a>
-  </div>
-</main>
+<section id="inicio" >
 
-<!-- Sección adicional para permitir scroll -->
-<section class="content-section">
-  <h3>Sobre nosotros</h3>
-  <p>Estamos comprometidos con ofrecerte la mejor experiencia en peluquería y barbería...</p>
+  <main class="hero-section">
+    <div class="hero-content">
+      <h1>RÚBEN PELUQUEROS</h1>
+      <h2>TU PELUQUERÍA EN VILLANUEVA DEL ARISCAL</h2>
+      <a href="login.html" class="cta-button">RESERVA TU CITA</a>
+    </div>
+  </main>
 </section>
+
+<!-- Sección: Sobre nosotros -->
+<section id="sobre-nosotros" class="service-section">
+  <div class="container">
+    <h2>Sobre Nosotros</h2>
+    <div class="service-content">
+      <div class="service-text">
+        <p>Aquí no hacemos “cortes de catálogo”.</p>
+        <p>Cada corte nace de una conversación: ¿qué llevas puesto hoy? ¿vas al instituto, al trabajo o a salir por la noche? ¿te gusta llevarlo corto, con volumen, despeinado o impecable?</p>
+        <p>Nos adaptamos a tu estilo, a tu rutina y a lo que tú quieras proyectar. Usamos herramientas limpias, productos de calidad y sobre todo… <strong>escuchamos</strong>.</p>
+        <p>No importa si es la primera vez que vienes o si ya eres de los que repiten cada mes: aquí no hay prisas, ni miradas raras. Solo buen rollo, consejos útiles y un resultado que te haga sentir bien contigo mismo.</p>
+        <p>Y si no sabes muy bien qué quieres… ¡tranquilo! Te ayudamos a encontrar ese look que te representa, sin inventos, sin modas pasajeras que no van contigo.</p>
+        <p><strong>Porque un buen corte no solo cambia tu pelo… cambia tu día.</strong></p>
+      </div>
+      <div class="service-image">
+        <img src="assets/salon.jpg" />
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Sección: Nuestros Servicios -->
+<section id="servicios" class="services-section">
+  <div class="container">
+    <h2 class="section-title">Servicios</h2>
+    <p class="section-subtitle">Cortes Profesionales</p>
+
+    <div class="services-grid">
+      <!-- Servicio 1 -->
+      <div class="service-card">
+        <div class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24">
+            <path d="m16.561,14.439l-2-2c-.584-.585-1.537-.585-2.121,0-.585.585-.585,1.536,0,2.121l2,2c.283.283.66.439,1.061.439s.777-.156,1.061-.439c.585-.585.585-1.536,0-2.121Zm-.707,1.414c-.189.188-.518.188-.707,0l-2-2c-.195-.195-.195-.512,0-.707.098-.098.226-.146.354-.146s.256.048.354.146l2,2c.195.195.195.512,0,.707Zm8.145,7.437l-3.229-3.229c1.604-1.949,1.634-4.825-.031-6.776-3.995-4.682-7.1-8.12-9.489-10.51L8.53.057l-.707.707,1.478,1.478-1.264,1.265-1.478-1.478-.707.707,1.478,1.478-1.216,1.216-1.478-1.478-.707.707,1.478,1.478-1.203,1.203-1.478-1.478-.707.707,1.478,1.478-1.255,1.255-1.478-1.479-.707.707,2.718,2.718c2.365,2.365,5.901,5.557,10.512,9.489.981.838,2.201,1.252,3.42,1.252,1.201,0,2.386-.426,3.354-1.223l3.231,3.231.707-.707ZM9.982,2.974c1.669,1.951,1.581,4.898-.265,6.744-.938.938-2.187,1.456-3.515,1.456-1.198,0-2.331-.42-3.229-1.19l7.009-7.009Zm3.952,17.002c-3.669-3.129-6.639-5.777-8.887-7.915.377.073.763.112,1.155.112,1.595,0,3.095-.621,4.222-1.749,1.461-1.461,2.003-3.496,1.63-5.386,2.132,2.239,4.737,5.162,7.921,8.895,1.373,1.609,1.326,3.995-.042,5.575l-.424.424c-1.58,1.368-3.966,1.416-5.575.043Z"
+              stroke="#e75480" fill="none" stroke-width="1"/>
+          </svg>
+        </div>
+        <h3>CORTE CLÁSICO</h3>
+        <p>Corte limpio y preciso para hombre o niño. Ideal para el día a día: rápido, ordenado y adaptado a tu estilo.</p>
+      </div>
+
+      <!-- Servicio 2 -->
+      <div class="service-card">
+        <div class="icon">
+          <svg id="Layer_1" height="512" viewBox="0 0 24 24" width="512" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1">
+            <path d="m18 3v1h6v2h-6v2h6v2h-6v2h6v2h-6v2h6v2h-6v6h-2v-21a3 3 0 0 1 3-3h5v2h-5a1 1 0 0 0 -1 1zm-4 17a3.983 3.983 0 0 1 -7 2.618 3.989 3.989 0 1 1 -3.689-6.548l2.601-6.07-1.649-3.849a15.528 15.528 0 0 1 -1.263-6.151h2a13.537 13.537 0 0 0 1.1 5.364l.9 2.1.9-2.1a13.537 13.537 0 0 0 1.1-5.364h2a15.528 15.528 0 0 1 -1.263 6.151l-1.649 3.849 2.6 6.07a4 4 0 0 1 3.312 3.93zm-8 0a2 2 0 1 0 -2 2 2 2 0 0 0 2-2zm1-2.618a3.981 3.981 0 0 1 1.6-1.115l-1.6-3.729-1.6 3.729a3.981 3.981 0 0 1 1.6 1.115zm5 2.618a2 2 0 1 0 -2 2 2 2 0 0 0 2-2z"
+              stroke="#e75480" fill="none" stroke-width="1"/>
+          </svg>
+        </div>
+        <h3>CORTE + BARBA</h3>
+        <p>Corte de pelo + perfilado de barba con cuchilla. Todo en una sola cita: pelo impecable y barba definida, con acabado profesional.</p>
+      </div>
+
+      <!-- Servicio 3 -->
+      <div class="service-card">
+        <div class="icon">
+          <svg id="Layer_1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1">
+            <path d="m16.883 2.282-.748.748 4.993 4.993-1.409 1.409-4.993-4.993-1.456 1.456 4.993 4.993-1.409 1.409-4.993-4.993-1.529 1.529 4.993 4.993-1.409 1.409-4.993-4.993-1.516 1.516 4.993 4.993-1.409 1.409-4.993-4.993-1.456 1.456 4.993 4.993-1.409 1.409-4.993-4.993-.85.85c-.387.387-.387 1.018 0 1.405l4.302 4.302-1.409 1.409-4.303-4.3c-1.164-1.164-1.164-3.059 0-4.224l14.601-14.601c1.164-1.164 3.059-1.164 4.224 0l4.302 4.302-1.409 1.409-4.302-4.302c-.387-.387-1.018-.387-1.406 0z"
+              stroke="#e75480" fill="none" stroke-width="1"/>
+          </svg>
+        </div>
+        <h3>ARREGLO DE BARBA</h3>
+        <p>Perfilado completo de barba con cuchilla. Definimos contornos.</p>
+      </div>
+
+      <!-- Servicio 4 -->
+      <div class="service-card">
+        <div class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24">
+            <path d="m24,0h-1c0,1.056-.633,1.544-1.196,1.773-.257-.459-.742-.773-1.304-.773-.651,0-1.201.419-1.408,1H3.858c-1.765,0-3.258,1.321-3.474,3.072L.024,8h12.225c1.778,0,3.272-1.332,3.477-3.099l.22-1.901h3.037c-.182,4.555-2.809,11.556-7.118,15.893-1.162,1.177-1.149,3.081.028,4.243.583.576,1.346.863,2.107.863.774,0,1.549-.297,2.135-.891,5.559-5.632,5.855-18.284,5.865-20.345,1.257-.434,2-1.438,2-2.763Zm-9.267,4.787c-.146,1.262-1.213,2.213-2.483,2.213H1.155l.222-1.806c.154-1.251,1.221-2.194,2.481-2.194h11.081l-.206,1.787Zm.69,17.618c-.774.785-2.044.793-2.828.019-.785-.774-.793-2.043-.02-2.827,4.823-4.854,7.425-12.431,7.425-17.096,0-.276.224-.5.5-.5s.5.224.5.5v.005c.001.141.064,14.186-5.577,19.9Zm-.423-1.405c0,.552-.448,1-1,1s-1-.448-1-1,.448-1,1-1,1,.448,1,1Z"
+              stroke="#e75480" fill="none" stroke-width="1"/>
+          </svg>
+        </div>
+        <h3>SERVICIO VIP</h3>
+        <p>Reserva este servicio y disfruta de una experiencia premium: corte o color personalizado, masaje capilar relajante, tratamiento hidratante y atención 100% dedicada. Ideal para regalarte un rato de relax o prepararte para una ocasión especial.</p>
+      </div>
+
+      <!-- Servicio 5 -->
+      <div class="service-card">
+        <div class="icon">
+         <?xml version="1.0" encoding="UTF-8"?>
+            <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" width="400" height="400"><path d="M14,24a5.952,5.952,0,0,1-4.242-1.758,6.025,6.025,0,0,1,0-8.484L14,9.261l4.263,4.517a6.029,6.029,0,0,1-.021,8.464h0A5.952,5.952,0,0,1,14,24ZM5,12a4.968,4.968,0,0,1-3.535-1.465,5.022,5.022,0,0,1,0-7.07L5,.007l3.527,3.45a5.02,5.02,0,0,1,.008,7.078A4.965,4.965,0,0,1,5,12Zm15-2a3.973,3.973,0,0,1-2.828-1.172,4.017,4.017,0,0,1,0-5.656L19.982.049,22.86,3.205a4.02,4.02,0,0,1-.032,5.623h0A3.973,3.973,0,0,1,20,10Z" stroke="#e75480" fill="none" stroke-width="1"/></svg>
+
+            </svg>
+
+        </div>
+        <h3>DECOLORACIÓN</h3>
+        <p>Aclarado suave del vello facial o corporal. Ideal para cejas, patillas o vellos finos. Resultado natural y sin irritación.</p>
+      </div>
+
+      <!-- Servicio 6 -->
+      <div class="service-card">
+        <div class="icon">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#e75480" stroke-width="1.5">
+  <path d="M4 12Q8 8 12 12T16 8Q20 12 20 12"/>
+  <path d="M4 16Q8 12 12 16T16 12Q20 16 20 16"/>
+</svg>
+        </div>
+        <h3>MECHAS</h3>
+        <p>Mechas naturales o de contraste. Iluminamos tu look con reflejos personalizados: californianas, babylights o mechas marcadas.</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- Sección: Galería -->
+<section id="galeria" class="gallery-section">
+  <div class="container">
+    <h2 class="section-title">Galería</h2>
+    <p class="section-subtitle">Nuestros Trabajos</p>
+
+    <div class="gallery-grid">
+      <!-- Repite este bloque por cada foto -->
+      <div class="gallery-item">
+        <img src="assets/galeria/corte-01.jpg" alt="Fade con pelo largo y texturizado" loading="lazy" />
+      </div>
+      <div class="gallery-item">
+        <img src="assets/galeria/corte-02.jpg" alt="Corte con flequillo corto y degradado" loading="lazy" />
+      </div>
+      <div class="gallery-item">
+        <img src="assets/galeria/corte-03.jpg" alt="Degradado bajo con contorno definido" loading="lazy" />
+      </div>
+      <div class="gallery-item">
+        <img src="assets/galeria/corte-04.jpg" alt="Corte rizado con degradado medio" loading="lazy" />
+      </div>
+      <div class="gallery-item">
+        <img src="assets/galeria/corte-05.jpg" alt="Quiff texturizado con degradado alto" loading="lazy" />
+      </div>
+      <div class="gallery-item">
+        <img src="assets/galeria/corte-06.jpg" alt="Corte rizado con flequillo y degradado" loading="lazy" />
+      </div>
+      <!-- Añade más si quieres -->
+    </div>
+  </div>
+</section>
+
 
   <footer class="cookie-banner">
     <p>Utilizamos cookies para ofrecerte la mejor experiencia en nuestra web. Puedes aprender más sobre qué cookies utilizamos o desactivarlas en los <a href="#">ajustes</a>.</p>
@@ -70,5 +204,46 @@
       <button>×</button>
     </div>
   </footer>
+  <!-- Lightbox -->
+<div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-content" id="lightbox-img">
+  <div class="caption"></div>
+</div>
+
+<script>
+  document.querySelectorAll('.gallery-item img').forEach(img => {
+    img.addEventListener('click', function() {
+      const lightbox = document.getElementById('lightbox');
+      const lightboxImg = document.getElementById('lightbox-img');
+      const caption = lightbox.querySelector('.caption');
+
+      lightboxImg.src = this.src;
+      caption.textContent = this.alt || '';
+      lightbox.style.display = 'block';
+
+      // Cerrar al hacer clic en el overlay
+      lightbox.onclick = function(e) {
+        if (e.target === lightbox) {
+          lightbox.style.display = 'none';
+        }
+      };
+
+      // Cerrar con tecla Esc
+      document.addEventListener('keydown', function closeOnEsc(e) {
+        if (e.key === 'Escape') {
+          lightbox.style.display = 'none';
+          document.removeEventListener('keydown', closeOnEsc);
+        }
+      });
+    });
+  });
+
+  // Cerrar con el botón ×
+  document.querySelector('.close').addEventListener('click', function() {
+    document.getElementById('lightbox').style.display = 'none';
+  });
+</script>
+
 </body>
 </html>
