--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
         <li class="btn-reserva"><a href="login.html">RESERVA TU CITA</a></li>
       </ul>
     </nav>
-    <div class="language-switcher">
-      <img src="assets/uk-flag.png" alt="English" width="20" />
+    <div class="social-icons">
+      <a href="https://www.instagram.com/rgutierrez212" target="_blank" rel="noopener" aria-label="Instagram">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+          <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
+          <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
+        </svg>
+      </a>
     </div>
   </header>
 
@@ -270,13 +276,47 @@
 </section>
 
 
-<footer class="cookie-banner">
-  <p>Utilizamos cookies para ofrecerte la mejor experiencia en nuestra web. Puedes aprender más sobre qué cookies utilizamos o desactivarlas en los <a href="#">ajustes</a>.</p>
-  <div class="cookie-buttons">
-    <button>Aceptar</button>
-    <button>Rechazar</button>
-    <button>Ajustes</button>
-    <button>×</button>
+<footer class="main-footer">
+  <div class="container">
+    <div class="footer-grid">
+      <!-- Columna 1: Contacto -->
+      <div class="footer-column">
+        <h3>CONTACTO</h3>
+        <ul class="contact-list">
+          <li><span>📞</span> Teléfono: (+34) 657 55 33 77</li>
+          <li><span>💬</span> WhatsApp: (+34) 657 55 33 77</li>          
+        </ul>
+      </div>
+
+      <!-- Columna 2: Dirección -->
+      <div class="footer-column">
+        <h3>DIRECCIÓN</h3>
+        <p>          
+          C. Nueva, 11<br>
+          41808  Villanueva del Ariscal (Sevilla)
+        </p>
+      </div>
+
+      <!-- Columna 3: Síguenos -->
+      <div class="footer-column">
+        <h3>SÍGUENOS</h3>
+        <ul class="social-list">
+          <li><a href="https://www.facebook.com/tuusuario" target="_blank" rel="noopener"><span>📘</span> Facebook</a></li>
+          <li><a href="https://twitter.com/tuusuario" target="_blank" rel="noopener"><span>𝕏</span> Twitter</a></li>
+          <li><a href="https://www.instagram.com/rgutierrez212" target="_blank" rel="noopener"><span>📸</span> Instagram</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Pie inferior -->
+    <div class="footer-bottom">
+      <p>
+        SG Salón Experience © 2026 &nbsp; • &nbsp;
+        <a href="#aviso-legal">Aviso Legal</a> &nbsp; • &nbsp;
+        <a href="#privacidad">Política de Privacidad</a> &nbsp; • &nbsp;
+        <a href="#cookies">Aviso de Cookies</a> &nbsp; • &nbsp;        
+      </p>
+    </div>
   </div>
 </footer>
 
