--- a/login.html
+++ b/login.html
@@ -7,12 +7,90 @@
   <link rel="stylesheet" href="css/style.css" />
   <!-- Cargar Vue.js desde CDN -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <style>
+    .container {
+      max-width: 500px;
+      margin: 5rem auto;
+      padding: 2rem;
+      background: #121212;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 1.5rem;
+      color: #e75480;
+    }
+    .input-field {
+      width: 100%;
+      padding: 0.75rem;
+      margin-bottom: 1rem;
+      border: 1px solid #333;
+      background: #1a1a1a;
+      color: white;
+      border-radius: 8px;
+      font-size: 1rem;
+    }
+    .btn {
+      width: 100%;
+      padding: 0.75rem;
+      background: #e75480;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: opacity 0.3s;
+    }
+    .btn:hover:not(:disabled) {
+      opacity: 0.9;
+    }
+    .btn:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+    .error {
+      color: #f44336;
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+    }
+    .toggle {
+      margin-top: 1.5rem;
+      text-align: center;
+      font-size: 0.95rem;
+    }
+    .toggle a {
+      color: #e75480;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .toggle a:hover {
+      text-decoration: underline;
+    }
+    .password-requirements {
+      background: rgba(231, 84, 128, 0.1);
+      border-left: 3px solid #e75480;
+      padding: 0.8rem;
+      margin: 1rem 0;
+      border-radius: 0 8px 8px 0;
+      font-size: 0.85rem;
+    }
+
+    .password-requirements ul {
+      margin-top: 0.5rem;
+      padding-left: 1.2rem;
+    }
+
+    .password-requirements li.valid {
+      color: #4caf50;
+      text-decoration: line-through;
+    }
+  </style>
 </head>
 <body>
   <div id="app" class="container">
     <h2>{{ modo === 'login' ? 'Iniciar sesión' : 'Crear cuenta' }}</h2>
 
-    <!-- Formulario dinámico -->
     <form @submit.prevent="modo === 'login' ? iniciarSesion() : registrarse()">
       <input 
         type="email" 
@@ -24,21 +102,29 @@
       <input 
         type="password" 
         v-model="password" 
-        placeholder="Contraseña (mín. 6 caracteres)" 
+        placeholder="Contraseña." 
         minlength="6" 
         required 
         class="input-field"
+        @input="checkPasswordStrength"
       />
-
+      <div v-if="showPasswordRequirements" class="password-requirements">
+        <small>La contraseña debe tener:</small>
+        <ul>
+          <li :class="{ valid: passwordRules.length }">Al menos 8 caracteres</li>
+          <li :class="{ valid: passwordRules.uppercase }">1 mayúscula (A-Z)</li>
+          <li :class="{ valid: passwordRules.lowercase }">1 minúscula (a-z)</li>
+          <li :class="{ valid: passwordRules.number }">1 número (0-9)</li>
+          <li :class="{ valid: passwordRules.special }">1 carácter especial (!@#$%)</li>
+        </ul>
+      </div>
       <button type="submit" class="btn" :disabled="cargando">
         {{ cargando ? 'Procesando...' : (modo === 'login' ? 'Entrar' : 'Crear cuenta') }}
       </button>
     </form>
 
-    <!-- Mensaje de error -->
     <p v-if="error" class="error">{{ error }}</p>
 
-    <!-- Cambiar modo -->
     <p class="toggle">
       {{ modo === 'login' ? '¿No tienes cuenta?' : '¿Ya tienes cuenta?' }}
       <a href="#" @click.prevent="cambiarModo">{{ modo === 'login' ? 'Regístrate' : 'Inicia sesión' }}</a>
@@ -46,11 +132,13 @@
   </div>
 
   <script>
-    const { createApp, ref } = Vue;
+
+    const { createApp, ref, computed } = Vue;
+
 
     createApp({
       setup() {
-        const modo = ref('login'); // 'login' o 'registro'
+        const modo = ref('login');
         const email = ref('');
         const password = ref('');
         const cargando = ref(false);
@@ -95,9 +183,72 @@
         };
 
         const iniciarSesion = async () => {
-          // Lo implementaremos después; por ahora solo registro
-          alert('Función de login aún no implementada.');
+          cargando.value = true;
+          error.value = '';
+
+          try {
+            const res = await fetch('./backend/api/auth.php', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({
+                action: 'login',
+                email: email.value,
+                password: password.value
+              }),
+              credentials: 'include'
+            });
+
+            const data = await res.json();
+
+            if (data.success) {
+              if (data.rol === 'admin') {
+                window.location.href = 'admin/dashboard.php';
+              } else {
+                window.location.href = 'index.html';
+              }
+            } else {
+              error.value = data.message || 'Credenciales incorrectas.';
+            }
+          } catch (err) {
+            error.value = 'No se pudo conectar al servidor.';
+            console.error(err);
+          } finally {
+            cargando.value = false;
+          }
         };
+
+        // Estado de las reglas
+        const passwordRules = ref({
+          length: false,
+          uppercase: false,
+          lowercase: false,
+          number: false,
+          special: false
+        });
+
+        // ¿Mostrar requisitos?
+        const showPasswordRequirements = computed(() => {
+          const allValid = passwordRules.value.length &&
+                          passwordRules.value.uppercase &&
+                          passwordRules.value.lowercase &&
+                          passwordRules.value.number &&
+                          passwordRules.value.special;
+          return !allValid && password.value !== '';
+        });
+
+        // Validar en tiempo real
+        const checkPasswordStrength = () => {
+          const pass = password.value;
+          passwordRules.value = {
+            length: pass.length >= 8,
+            uppercase: /[A-Z]/.test(pass),
+            lowercase: /[a-z]/.test(pass),
+            number: /[0-9]/.test(pass),
+            special: /[^A-Za-z0-9]/.test(pass)
+          };
+        };
+
+
 
         return {
           modo,
@@ -107,10 +258,15 @@
           error,
           cambiarModo,
           registrarse,
-          iniciarSesion
+          iniciarSesion,
+          passwordRules,
+          showPasswordRequirements,
+          checkPasswordStrength
         };
       }
     }).mount('#app');
-  </script>
+
+
+</script>
 </body>
 </html>
